--- a/home.css
+++ b/home.css
@@ -51,7 +51,7 @@
 
 .toolbar-bottom::before {
   content: "" !important;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: auto;
