--- a/home.css
+++ b/home.css
@@ -44,9 +44,10 @@
   width: 100%;
   height: 68px;
   border: 0;
-  z-index: 600;
+  /* z-index: 600; */
   /* padding: 0 10px; */
   margin-bottom: 0;
+  overflow: hidden;
 }
 
 .toolbar-bottom::before {
