--- a/home.css
+++ b/home.css
@@ -1,6 +1,14 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Niconne&display=swap"); */
 @import url("http://fonts.cdnfonts.com/css/stadella");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+
+.page-content-scroll {
+  position: fixed;
+  top: 0;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+}
 .cover-bg-1 {
   background-image: url(images/covers/girl.png);
 }
