--- a/home.css
+++ b/home.css
@@ -39,19 +39,21 @@
   bottom: 0;
   width: 100%;
 }
-.toolbar-bottom {
-  position: fixed;
-  background: #212529;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 68px;
-  border: 0;
-  z-index: 600;
-  /* padding: 0 10px; */
-  margin-bottom: 0;
-  overflow: hidden;
+@media screen and (max-width: 656px) {
+  .toolbar-bottom {
+    position: fixed;
+    background: #212529;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 68px;
+    border: 0;
+    z-index: 600;
+    /* padding: 0 10px; */
+    margin-bottom: 0;
+    overflow: hidden;
+  }
 }
 
 .toolbar-bottom::before {
