--- a/home.css
+++ b/home.css
@@ -33,11 +33,14 @@
 }
 
 /* toolbar bottom */
-.toolbar {
+footer {
   position: fixed;
-  overflow: hidden;
-  bottom: 0;
-  width: 100%;
+}
+
+@media only screen and (max-device-width: 480px) {
+  footer {
+    position: static; /* or relative */
+  }
 }
 @media screen and (max-width: 656px) {
   .toolbar-bottom {
@@ -50,7 +53,6 @@
     height: 68px;
     border: 0;
     z-index: 600;
-    /* padding: 0 10px; */
     margin-bottom: 0;
     overflow: hidden;
   }
