--- a/home.css
+++ b/home.css
@@ -33,19 +33,21 @@
 }
 
 /* toolbar bottom */
-footer {
+.toolbar {
   position: fixed;
   overflow: hidden;
   bottom: 0;
   width: 100%;
+  float: bottom;
 }
 
 @media screen and (max-width: 656px) {
-  footer {
+  .toolbar {
     position: static;
     overflow: hidden;
     bottom: 0;
     width: 100%;
+    float: bottom;
   }
   .toolbar-bottom {
     position: fixed;
