--- a/index.css
+++ b/index.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Niconne&display=swap");
 
 body {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  height: 100vh;
+  height: -webkit-fill-available;
   background: #a19d96;
   font-family: "Quicksand", sans-serif;
-  margin: 0;
   background-size: cover;
   padding: 0;
 }
@@ -16,6 +20,7 @@ body {
   .size_frame {
     width: 28% !important;
     height: 100vh !important;
+    height: -webkit-fill-available;
     text-align: center !important;
   }
 }
